tests/ui/consts/issue-90870.stderr
error[E0658]: cannot call conditionally-const operator in constant functions
  --> $DIR/issue-90870.rs:9:5
   |
LL |     a == b
   |     ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
help: consider dereferencing here
   |
LL |     *a == *b
   |     +     +

error: `PartialEq` is not yet stable as a const trait
  --> $DIR/issue-90870.rs:9:5
   |
LL |     a == b
   |     ^^^^^^
   |
help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   |
LL + #![feature(const_trait_impl)]
   |

error[E0658]: cannot call conditionally-const operator in constant functions
  --> $DIR/issue-90870.rs:17:5
   |
LL |     a == b
   |     ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
help: consider dereferencing here
   |
LL |     ****a == ****b
   |     ++++     ++++

error: `PartialEq` is not yet stable as a const trait
  --> $DIR/issue-90870.rs:17:5
   |
LL |     a == b
   |     ^^^^^^
   |
help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   |
LL + #![feature(const_trait_impl)]
   |

error[E0658]: cannot call conditionally-const operator in constant functions
  --> $DIR/issue-90870.rs:26:12
   |
LL |         if l == r {
   |            ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
help: consider dereferencing here
   |
LL |         if *l == *r {
   |            +     +

error: `PartialEq` is not yet stable as a const trait
  --> $DIR/issue-90870.rs:26:12
   |
LL |         if l == r {
   |            ^^^^^^
   |
help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   |
LL + #![feature(const_trait_impl)]
   |

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
